# itch_lob_parser

./: .gitignore  .rules.verible_lint  CMakeLists.txt  README.md  main.py  pyproject.toml  uv_make.py
cpp/: itch.cppm  itch_cli.cpp  itch_parser.cpp  itch_parser.cppm  itch_parser.hpp  itch_spec.cpp  itch_spec.cppm  itch_spec.hpp  lob.cpp  lob.cppm  lob.hpp
rtl/: itch_parser_core.sv  itch_parser_core_layout.sv  itch_parser_core_legacy.sv  itch_parser_pkg.sv  tb_itch_parser_core_xsim.sv
rtl/matmul_test/: matrix_multiply.v  memory_RAM.v  myip_v1_0.v  tb_myip_v1_0.v  test_64x8_expected.mem  test_64x8_input.mem  verilator_instruction.md
rtl/matmul_test/cocotb/: Makefile  test_myip_v1_0.py
scripts/: bench_parsers.py  eperl_util.py  flop.py  gen_bench_stream.py  gen_cpp_parser_fixtures.py  packet_gen.py  pipe.py  profile_parsers.py  profile_python_parser.py  ref_parser.py
scripts/cocotb/: Makefile  bench_itch_parser_core.py  run_verilator.py  test_itch_parser_core.py
scripts/vivado/: export_xsim_vectors.py  run_post_synth_xsim.py  run_synth.py  run_xsim.py  synth_ooc.tcl
tests/: test_itch_packets.py
