[project]
name = "itch-lob-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cocotb~=2.0",
    "cocotbext-axi>=0.1.28",
]

[project.scripts]
make = "uv_make:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["uv_make.py"]
